--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "cartProject",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-chart.js": "^1.1.1"
+  },
   "scripts": {
     "test": "gulp test"
   },
