--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "bootstrap-sass": "~3.3.5",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
+    "moment": "^2.17.1",
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "components-font-awesome": "^4.7.0",
