--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-chart.js": "^1.1.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.3"
+    "angular-mocks": "~1.5.3",
+    "angular-bootstrap": "^2.5.0"
   },
   "overrides": {
     "bootstrap-sass": {
