--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,13 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "components-font-awesome": "^4.7.0",
-    "angular-chart.js": "^1.1.1"
+    "angular-chart.js": "^1.1.1",
+    "pouchdb": "^6.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "pouchdb": "^6.2.0"
   },
   "overrides": {
     "bootstrap-sass": {
